# vibeDebrid

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SPEC.md  STATUS.md  config.example.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  vibeDebrid.db-shm  vibeDebrid.db-wal
.claude/: settings.json
.claude/agents/: architect.md  backend-dev.md  code-reviewer.md  frontend-dev.md  integrations-dev.md  test-writer.md
.claude/memory/: MEMORY.md  episode-mismatch-filter.md  feedback-no-push.md  manual-add-shows.md  migration-plan.md  original-language.md  rd-cleanup.md  reverse-containment.md  season-packs.md  show-monitoring.md  symlink-health.md  symlink-naming.md  xem-integration.md  zurg-autorecovery.md
.github/workflows/: docker-publish.yml
docker/: .env.example
docker/rclone/: rclone.example.conf
docker/zurg/: config.example.yml
scripts/: backtest_mount_lookup.py
src/: config.py  database.py  main.py
src/api/: deps.py
src/api/routes/: dashboard.py  discover.py  duplicates.py  health.py  movie.py  omdb.py  queue.py  search.py  settings.py  show.py  sse.py  tools.py  webhook.py
src/core/: backfill.py  cleanup.py  dedup.py  event_bus.py  filter_engine.py  migration.py  mount_scanner.py  plex_watchlist.py  queue_manager.py  queue_processor.py  rd_bridge.py  rd_cleanup.py  scrape_pipeline.py  show_manager.py  symlink_health.py  symlink_manager.py  update_checker.py  xem_mapper.py
src/middleware/: csrf.py
src/models/: __init__.py  anidb.py  media_item.py  monitored_show.py  mount_index.py  scrape_result.py  symlink.py  torrent.py  xem_cache.py
src/services/: anidb.py  http_client.py  jellyfin.py  nyaa.py  omdb.py  plex.py  real_debrid.py  tmdb.py  torrent_parser.py  torrentio.py  xem.py  zilean.py
src/static/js/: dashboard.js  discover.js  duplicates.js  logs.js  movie.js  show.js  (+5 more)
src/templates/: base.html  dashboard.html  discover.html  duplicates.html  logs.html  movie.html  queue.html  search.html  settings.html  show.html  tools.html
tests/: conftest.py  test_anidb.py  test_api_discover.py  test_api_routes.py  test_api_show.py  test_backfill.py  test_cleanup.py  test_csrf_middleware.py  test_db_indexes.py  test_dedup.py  test_event_bus.py  test_filter_engine.py  test_hardcoded_paths.py  test_health.py  test_http_client.py  test_jellyfin.py  test_main.py  test_migration.py  test_mount_scanner.py  test_movie_routes.py  test_nyaa.py  test_omdb.py  test_original_language.py  test_plex.py  test_plex_watchlist.py  test_queue_manager.py  test_queue_processor.py  test_queue_processor_checking.py  test_race_conditions.py  test_rd_451_fallback.py  test_rd_bridge.py  test_rd_cleanup.py  test_real_debrid.py  test_scheduled_jobs.py  test_scrape_pipeline.py  test_search_fixes.py  test_season_pack.py  test_season_pack_split.py  test_settings_security.py  test_show_manager.py  (+9 more)
