[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeDebrid"
version = "0.3.2"
description = "Self-hosted Real-Debrid media automation: scrape, filter, download, and organize media into a Plex-ready symlink library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["real-debrid", "plex", "media-automation", "torrent", "zurg", "rclone"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Multimedia",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "parse-torrent-name>=1.1.1",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/vibeDebrid"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/vibeDebrid/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line-too-long — formatter handles this better
    "N806",   # uppercase var in function — idiomatic for SQLAlchemy aliases (S, E, Q)
    "N802",   # uppercase function name — used for test helpers
    "N817",   # camelcase imported as acronym
]
